server/routerlicious/kubernetes/metric/grafana/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana
 namespace: metric
 annotations:
   kubernetes.io/ingress.class: "nginx-prod"
   ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - "grafana.wu2.prague.office-int.com"
   secretName: wu2-tls-certificate
 rules:
 - host: "grafana.wu2.prague.office-int.com"
   http:
     paths:
     - path: /
       backend:
         serviceName: grafana
         servicePort: 80
